# mantissa

./: .gitignore  AUTHORS.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASES.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
assets/diagrams/: forward.mmd  training.mmd
bench/: bench_backprop.c  bench_conv.c  bench_layout.c  bench_scaling.c  benchmark.c
clients/: README.md
clients/cpp/: README.md  demo.cpp
clients/csharp/: Demo.cs  README.md  demo.csproj
clients/java/: Demo.java  README.md
clients/javascript/: README.md  demo.js  package.json
clients/rust/: Cargo.toml  README.md
clients/rust/src/: main.rs
docs/: DESIGN.md  USAGE.md
examples/: mlp_example.c  perceptron_example.c  train_xor.c
include/: activations.h  backprop.h  config.h  conv.h  dtypes.h  loss.h  ops.h  pool.h  tk_export.h
python/: mantissa.py  perceptron_example.py  test_binding.py  test_conv_binding.py  train_example.py
python/mantissa/: __init__.py
src/: activations.c  backprop.c  conv.c  dtypes.c  loss.c  ops.c  pool.c  pool.h
tests/: test_backprop.c  test_conv.c  test_dtypes.c  test_edges.c
