[build-system]
# setuptools >=77 for the PEP 639 SPDX `license` string; wheel for bdist_wheel.
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name (the import name stays `mantissa`; the bare "mantissa"
# project is already taken on PyPI by an unrelated package).
name = "mantissa-nn"
version = "0.1.12"
description = "A fast, memory-lean neural-network core in C, with a Python binding."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tekin Ertekin" }]
keywords = ["neural-network", "low-precision", "bfloat16", "fp8", "quantization", "ctypes", "C"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/tekinertekin/mantissa"
Repository = "https://github.com/tekinertekin/mantissa"

[project.optional-dependencies]
# numpy is optional: it enables the zero-copy fast path but nothing breaks without it.
numpy = ["numpy"]

[tool.setuptools]
# The package lives under python/; the compiled libmantissa.<ext> is placed
# inside it at build time (see setup.py) and shipped as package data.
package-dir = { "" = "python" }
packages = ["mantissa"]

[tool.setuptools.package-data]
mantissa = ["libmantissa.*"]
